# napari-molecule-reader

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_molecule_reader/: __init__.py  _reader.py  bonds.py  colors.py  molecule_reader.py  napari.yml
src/napari_molecule_reader/_tests/: test_reader.py  test_sample_data.py
