[metadata]
name = napari-molecule-reader

author = Lorenzo Gaifas
author_email = brisvag@gmail.com
url = https://github.com/brisvag/napari-molecule-reader
license = BSD-3-Clause
description = A napari plugin that read molecular structure files.
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/brisvag/napari-molecule-reader/issues
    Documentation = https://github.com/brisvag/napari-molecule-reader#README.md
    Source Code = https://github.com/brisvag/napari-molecule-reader
    User Support = https://github.com/brisvag/napari-molecule-reader/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-molecule-reader = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-molecule-reader = napari_molecule_reader:napari.yml
